se configuraron parametros iniciales en index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Videojuegos TD</title>
+    <link rel="stylesheet" href="estilos.css">
+    <link rel="shortcut icon" href="img/t_d.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/c55325d833.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
