se agrego primera parte con redes sociales y menú principal

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Menú sociales -->
-    <div id="home" class="nav-sociales">
+    <div id="home" class="nav_sociales">
         <a href="https://www.facebook.com/ivctecnodesign" target="-blank" class="fab fa-facebook-f"></a>
         <a href="https://twitter.com/TecnodesignD" target="-blank" class="fab fa-twitter"></a>
         <a href="https://www.instagram.com/ivc_tecno_design/" target="-blank" class="fab fa-instagram"></a>
@@ -22,6 +22,19 @@
         <a href="https://donate.stripe.com/bIYdQQ9TH7zKgwMcMN" target="-blank" class="fab fa-stripe"></a>
     </div>
 
+
     <!-- Menú principal -->
+    <nav class="nav_principal">
+        <img src="img/tecnodesign_neon.png" alt="">
+        <div class="input_search">
+            <input type="text" name="" id="" placeholder="¿Qué deseas buscar?">
+            <i class="fas fa-search"></i>
+        </div>
+        <div class="enlaces">
+            <a href="#destacados">Destacados</a>
+            <a href="#articulos">Articulos</a>
+            <a href="#gallery">Multimedia</a>
+        </div>
+    </nav>
 </body>
 </html>
