se agrego header

--- a/index.html
+++ b/index.html
@@ -36,5 +36,16 @@
             <a href="#gallery">Multimedia</a>
         </div>
     </nav>
+
+    <!-- Header -->
+    <header>
+        <div class="content_header">
+            <span class="badge">Nuevo</span>
+            <h3>Residen Evil Village el más descargado</h3>
+            <p>Año 2021, cuatro años después los eventos de Resident Evil 7, Ethan Winters logra reunirse con su esposa Mia, quien tuvo un pasado ligado al bioterrorismo como una agente especial de la empresa bioterrorista sucesora de Umbrella, llamada Las Conexiones.</p>
+            <button class="btn">Leer más...</button>
+        </div>
+        <div class="imagen_header"></div>
+    </header>
 </body>
 </html>
