--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </div>
     </nav>
 
+
     <!-- Header -->
     <header>
         <div class="content_header">
@@ -47,5 +48,48 @@
         </div>
         <div class="imagen_header"></div>
     </header>
+
+
+    <!-- Destacados -->
+    <section id="destacados" class="destacados">
+
+        <div class="game">
+            <div class="content">
+                <h2>Crash Bandicoot 4</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias eius aut culpa! Iste nemo nobis deleniti harum fugiat dicta velit, placeat officiis maxime natus labore, architecto enim perferendis, debitis libero.</p>
+                <a href="">Leer más...</a>
+            </div>
+            <img src="img/game2.png" alt="">
+        </div>
+
+        <div class="game">
+            <div class="content">
+                <h2>Uncharted 4</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias eius aut culpa! Iste nemo nobis deleniti harum fugiat dicta velit, placeat officiis maxime natus labore, architecto enim perferendis, debitis libero.</p>
+                <a href="">Leer más...</a>
+            </div>
+            <img src="img/game3.png" alt="">
+        </div>
+
+        <div class="game">
+            <div class="content">
+                <h2>Good of War</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias eius aut culpa! Iste nemo nobis deleniti harum fugiat dicta velit, placeat officiis maxime natus labore, architecto enim perferendis, debitis libero.</p>
+                <a href="">Leer más...</a>
+            </div>
+            <img src="img/game4.png" alt="">
+        </div>
+
+        <div class="game">
+            <div class="content">
+                <h2>Assassins creed valhalla</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias eius aut culpa! Iste nemo nobis deleniti harum fugiat dicta velit, placeat officiis maxime natus labore, architecto enim perferendis, debitis libero.</p>
+                <a href="">Leer más...</a>
+            </div>
+            <img src="img/game5.png" alt="">
+        </div>
+
+    </section>
+
 </body>
 </html>
