se agregaron los articulos

--- a/index.html
+++ b/index.html
@@ -91,5 +91,101 @@
 
     </section>
 
+
+    <!-- Titulo de artículos -->
+    <div class="title" id="articulos">
+        <h1>Blog</h1>
+        <div class="badget-contaier">
+            <span class="badge">Tendencias</span>
+            <span class="badge">Videojuegos</span>
+            <span class="badge">Consolas</span>
+            <span class="badge">Noticias</span>
+        </div>
+    </div>
+
+
+    <!-- Articulos -->
+    <section class="articulos">
+        <div class="container-articulos">
+
+            <div class="card" id="goodofwar">
+                <div class="imgBox">
+                    <img src="img/card1.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>Imagenes Good Of War Ragnarok</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt at fugiat voluptates aperiam quos libero sequi vitae, quae deserunt ullam ducimus vero cupiditate quaerat exercitationem aspernatur a vel dolores unde?</p>
+                    <a href="#" class="btn">Leer más...</a>
+                </div>
+            </div>
+
+            <div class="card" id="exitoventas">
+                <div class="imgBox">
+                    <img src="img/game1.png" alt="">
+                </div>
+                <div class="content">
+                    <h3>Éxito en ventas</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt at fugiat voluptates aperiam quos libero sequi vitae, quae deserunt ullam ducimus vero cupiditate quaerat exercitationem aspernatur a vel dolores unde?</p>
+                    <a href="#" class="btn">Leer más...</a>
+                </div>
+            </div>
+
+            <div class="card" id="gratismes">
+                <div class="imgBox">
+                    <img src="img/card2.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>Juego gratuito del mes</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt at fugiat voluptates aperiam quos libero sequi vitae, quae deserunt ullam ducimus vero cupiditate quaerat exercitationem aspernatur a vel dolores unde?</p>
+                    <a href="#" class="btn">Leer más...</a>
+                </div>
+            </div>
+
+            <div class="card" id="acvalhalla">
+                <div class="imgBox">
+                    <img src="img/card3.jpeg" alt="">
+                </div>
+                <div class="content">
+                    <h3>Nuevo contenido descargable</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt at fugiat voluptates aperiam quos libero sequi vitae, quae deserunt ullam ducimus vero cupiditate quaerat exercitationem aspernatur a vel dolores unde?</p>
+                    <a href="#" class="btn">Leer más...</a>
+                </div>
+            </div>
+
+            <div class="card" id="fifa21">
+                <div class="imgBox">
+                    <img src="img/card4.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>Próxima actualización de FIFA2022</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt at fugiat voluptates aperiam quos libero sequi vitae, quae deserunt ullam ducimus vero cupiditate quaerat exercitationem aspernatur a vel dolores unde?</p>
+                    <a href="#" class="btn">Leer más...</a>
+                </div>
+            </div>
+
+            <div class="card" id="recordventas">
+                <div class="imgBox">
+                    <img src="img/card5.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h3>Recod en ventas</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt at fugiat voluptates aperiam quos libero sequi vitae, quae deserunt ullam ducimus vero cupiditate quaerat exercitationem aspernatur a vel dolores unde?</p>
+                    <a href="#" class="btn">Leer más...</a>
+                </div>
+            </div>
+
+        </div>
+
+        <aside>
+            <nav>
+                <a href="#goodofwar">Imagenes de Good Of War Ragnarok</a>
+                <a href="#exitoventas">Éxito en ventas</a>
+                <a href="#gratismes">Juego gratuito del mes</a>
+                <a href="#acvalhalla">Nuevo contenido</a>
+                <a href="#fifa21">Próxima actualización FIFA21</a>
+                <a href="#recordventas">Record en ventas</a>
+            </nav>
+        </aside>
+    </section>
 </body>
 </html>
