se agrego footer

--- a/index.html
+++ b/index.html
@@ -252,5 +252,21 @@
         </div>
         
     </section>
+
+    <!-- Footer -->
+    <div class="nav_sociales">
+        <a href="https://www.facebook.com/ivctecnodesign" target="-blank" class="fab fa-facebook-f"></a>
+        <a href="https://twitter.com/TecnodesignD" target="-blank" class="fab fa-twitter"></a>
+        <a href="https://www.instagram.com/ivc_tecno_design/" target="-blank" class="fab fa-instagram"></a>
+        <a href="https://www.youtube.com/channel/UC5COux2kCCr01HxIqFn-jqw" target="-blank" class="fab fa-youtube"></a>
+        <a href="https://wa.me/message/KKJK3OARSN52O1" target="-blank" class="fab fa-whatsapp"></a>
+        <a href="https://t.me/canal_tecnodesign_bot" target="-blank" class="fab fa-telegram"></a>
+        <a href="https://paypal.me/IVCTecnoDesign?country.x=MX&locale.x=es_XC" target="-blank" class="fab fa-paypal"></a>
+        <a href="https://donate.stripe.com/bIYdQQ9TH7zKgwMcMN" target="-blank" class="fab fa-stripe"></a>
+    </div>
+    <footer>
+        <img src="img/t_d.png" alt="">
+        <p>© 2022. All Rights Reserved TednoDesign</p>
+    </footer>
 </body>
 </html>
