se agrego botón de inicio y fuentes principales

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="https://kit.fontawesome.com/c55325d833.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- Botón de ir arriba -->
+    <a href="#home" class="btn-top"><span class="fas fa-angle-up"></span></a>
+
     <!-- Menú sociales -->
     <div id="home" class="nav_sociales">
         <a href="https://www.facebook.com/ivctecnodesign" target="-blank" class="fab fa-facebook-f"></a>
@@ -268,5 +271,7 @@
         <img src="img/t_d.png" alt="">
         <p>© 2022. All Rights Reserved TednoDesign</p>
     </footer>
+
+
 </body>
 </html>
